Switching branches. working on api

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -48,5 +48,22 @@
         ]
       }
     }
+  },
+  "api": {
+    "cloudcomputingapp": {
+      "service": "AppSync",
+      "providerPlugin": "awscloudformation",
+      "output": {
+        "authConfig": {
+          "defaultAuthentication": {
+            "authenticationType": "AMAZON_COGNITO_USER_POOLS",
+            "userPoolConfig": {
+              "userPoolId": "authcloudcomputingapp3610a7d2"
+            }
+          },
+          "additionalAuthenticationProviders": []
+        }
+      }
+    }
   }
 }
