got swipe to delete and query to work. Finally.

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -65,5 +65,12 @@
         }
       }
     }
+  },
+  "storage": {
+    "image": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": []
+    }
   }
 }
