--- a/app/src/main/res/raw/amplifyconfiguration.json
+++ b/app/src/main/res/raw/amplifyconfiguration.json
@@ -77,7 +77,22 @@
                         "AuthMode": "AMAZON_COGNITO_USER_POOLS",
                         "ClientDatabasePrefix": "cloudcomputingapp_AMAZON_COGNITO_USER_POOLS"
                     }
+                },
+                "S3TransferUtility": {
+                    "Default": {
+                        "Bucket": "cloudcomputingappd856797fc49f4b9c9d710747db1ef7124721-dev",
+                        "Region": "us-west-2"
+                    }
                 }
+            }
+        }
+    },
+    "storage": {
+        "plugins": {
+            "awsS3StoragePlugin": {
+                "bucket": "cloudcomputingappd856797fc49f4b9c9d710747db1ef7124721-dev",
+                "region": "us-west-2",
+                "defaultAccessLevel": "guest"
             }
         }
     }
