OnClickListener working for edit notes. Trying to get edit to work.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.cloudcomputing.MainActivity" />
         </activity>
+        <activity
+            android:name=".EditNoteActivity"
+            android:label="Edit Note"
+            android:theme="@style/Theme.CloudComputing.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.cloudcomputing.MainActivity" />
+        </activity>
     </application>
 
 
